# Freelance-Market

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  run.sh  start-docker.sh
.github/workflows/: main.yml
database_manager/: CMakeLists.txt
database_manager/include/: DatabaseManager.h
database_manager/include/database/: Data.h  DataType.h  Database.h  Filter.h  Table.h
database_manager/src/: DatabaseManager.cpp
database_manager/src/database/: Data.cpp  DataType.cpp  Database.cpp  Filter.cpp  Table.cpp
freelance_market/: CMakeLists.txt
freelance_market/include/: FreelanceMarket.h
freelance_market/include/states/: EntranceMenu.h  MainMenu.h
freelance_market/include/states/EntranceMenuHandlers/: AccountCreationHandler.h  AuthorizationHandler.h  ClientLogInHandler.h  ClientSignUpHandler.h  CompanySignUpHandler.h  EntranceHandler.h  FreelancerLogInHandler.h  FreelancerSignUpHandler.h  LogInHandler.h  PersonSignUpHandler.h  SignUpHandler.h  UserExistHandler.h  ValidPasswordHandler.h
freelance_market/include/states/MainMenuHandlers/: AcceptProposalHandler.h  ClientMenuHandler.h  CompleteOrderHandler.h  CreateOrderHandler.h  CreateProposalHandler.h  DeclineProposalHandler.h  FreelancerMenuHandler.h  LogOutHandler.h  MainMenuHandler.h  RateClientHandler.h  RateFreelancerHandler.h  ShowAvailableOrdersHandler.h  ShowMyOrdersHandler.h  ShowMyProposalsHandler.h  ShowProposalsHandler.h  ShowTakenOrdersHandler.h
freelance_market/src/: FreelanceMarket.cpp
freelance_market/src/states/: EntranceMenu.cpp  MainMenu.cpp
freelance_market/src/states/EntranceMenuHandlers/: AccountCreationHandler.cpp  AuthorizationHandler.cpp  ClientLogInHandler.cpp  ClientSignUpHandler.cpp  CompanySignUpHandler.cpp  EntranceHandler.cpp  FreelancerLogInHandler.cpp  FreelancerSignUpHandler.cpp  LogInHandler.cpp  PersonSignUpHandler.cpp  SignUpHandler.cpp  UserExistHandler.cpp  ValidPasswordHandler.cpp
freelance_market/src/states/MainMenuHandlers/: AcceptProposalHandler.cpp  ClientMenuHandler.cpp  CompleteOrderHandler.cpp  CreateOrderHandler.cpp  CreateProposalHandler.cpp  DeclineProposalHandler.cpp  FreelancerMenuHandler.cpp  LogOutHandler.cpp  MainMenuHandler.cpp  RateClientHandler.cpp  RateFreelancerHandler.cpp  ShowAvailableOrdersHandler.cpp  ShowMyOrdersHandler.cpp  ShowMyProposalsHandler.cpp  ShowProposalsHandler.cpp  ShowTakenOrdersHandler.cpp
handler/: CMakeLists.txt
handler/include/: BaseHandler.h  Handler.h  LogLevel.h  Request.h
handler/src/: BaseHandler.cpp  LogLevel.cpp  Request.cpp
orders_manager/: CMakeLists.txt
orders_manager/include/: OrdersManager.h
orders_manager/src/: OrdersManager.cpp
rating_manager/: CMakeLists.txt
rating_manager/include/: RatingManager.h
rating_manager/src/: RatingManager.cpp
state/: CMakeLists.txt
state/include/: State.h
state/src/: State.cpp
users_manager/: CMakeLists.txt
users_manager/include/: User.h  UserInteraction.h  UserManager.h
users_manager/src/: User.cpp  UserInteraction.cpp  UserManager.cpp
